--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/fd1485fed3.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="https://www.picng.com/thumbnail/rock_music/png_rock_music_91349_small.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Omar Fernando Taipicaña Heredia</title>
 </head>
@@ -59,7 +60,7 @@
             </svg>       
     </div>
     <h2 class="subtitulo">Acerca de mi</h2>
-    <p class="parrafo-mi">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim perspiciatis quia quisquam obcaecati tempore. Placeat blanditiis reprehenderit ullam aliquam, pariatur dolorem! Vero deleniti tempora eligendi enim ea ex, facere architecto.</p>
+    <p class="parrafo-mi">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla eveniet iusto quisquam vel facere numquam provident soluta repudiandae iste quis at nihil tempora, magnam ducimus. Ab harum incidunt non et? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim perspiciatis quia quisquam obcaecati tempore. Placeat blanditiis reprehenderit ullam aliquam, pariatur dolorem! Vero deleniti tempora eligendi enim ea ex, facere architecto.</p>
     <h2 class="subtitulo">Mis habilidades</h2>
     <div class="habilidades">
         <div class="habilidades-items">
@@ -90,7 +91,7 @@
     <h2 class="subtitulo">Experiencia</h2>
     <div>
         <div>
-            
+
         </div>
     </div>
 
