--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Omar Fernando Taipicaña Heredia</title>
 </head>
 <body>
-    
+
 <header class="header">
     <nav class="nav">
         <i id="menu-icon" class="fa-solid fa-bars"></i>
@@ -20,25 +20,25 @@
             <a class="nav--link" href="#">Home</a>
             </li>
             <li class="nav--item">
-            <a class="nav--link" href="#">Acerca de mi</a>
+            <a class="nav--link" href="#acerca-de-mi">Acerca de mi</a>
             </li>
             <li class="nav--item">
-            <a class="nav--link" href="#">Mis Habilidades</a>
+            <a class="nav--link" href="#habilidades">Mis Habilidades</a>
             </li>
             <li class="nav--item">
-            <a class="nav--link" href="#">Experiencia</a>
+            <a class="nav--link" href="#experiencia">Experiencia</a>
             </li>
             <li class="nav--item">
-            <a class="nav--link" href="#">Portafolio</a>
+            <a class="nav--link" href="#portafolio">Portafolio</a>
             </li>
             <li class="nav--item">
-            <a class="nav--link" href="#">Contacto</a>
+            <a class="nav--link" href="#contacto">Contacto</a>
             </li>
         </ul>
       </div>
     </nav>
-    <div>
-    <img class="foto" src="./assets/img/FER.jpg" alt="imagen">
+    <div class="photo--content">
+    <img class="photo" src="./assets/img/FER.jpg" alt="imagen">
     </div>
     <h1><span class="saludo" >Hola, soy Fer</span>Diseñador y desarrollador Web</h1>
     <div class="redes-sociales">
@@ -59,44 +59,110 @@
             <path d="M13.6357 26.9493C11.2079 26.8975 9.13095 25.4663 8.16464 23.4133C8.32517 23.4237 8.48873 23.4297 8.65625 23.4297L8.65764 23.4297C9.29141 23.4279 9.92244 23.3464 10.5359 23.1871L10.5093 22.2131C7.92092 21.6894 5.92597 19.558 5.61312 16.8974C6.39021 17.2153 7.21894 17.3961 8.06235 17.4293L9.83259 17.499L8.36 16.5141C6.69996 15.4038 5.61328 13.5176 5.61328 11.3789L5.61328 11.3773C5.6105 10.5269 5.78514 9.688 6.12299 8.91329C9.47862 12.7334 14.3256 15.2051 19.7278 15.4876L20.3734 15.5214L20.2437 14.888C20.1476 14.4184 20.0898 13.9368 20.0898 13.4609C20.0898 10.0639 22.8361 7.29688 26.25 7.29688L26.2511 7.29687C27.0948 7.29501 27.9298 7.46692 28.7042 7.8019C29.4786 8.13688 30.1756 8.62774 30.752 9.24391L30.9408 9.44571L31.2121 9.39325C32.2763 9.18747 33.3105 8.85601 34.2932 8.40701C33.7731 9.2764 33.042 10.0102 32.1587 10.535L32.4677 11.462C33.2599 11.3765 34.0373 11.2152 34.7874 10.9942C34.1364 11.7289 33.4064 12.3961 32.6148 12.9754L32.3927 13.138L32.4113 13.4126C32.4295 13.682 32.4297 13.9542 32.4297 14.2461C32.4297 22.8397 25.893 32.7031 13.9766 32.7031C11.0251 32.7031 8.24437 32.0164 5.77471 30.7907C8.84121 30.7004 11.6621 29.6219 13.9333 27.8429L15.0359 26.9793L13.6357 26.9493Z" stroke="white"/>
             </svg>       
     </div>
-    <h2 class="subtitulo">Acerca de mi</h2>
+</header>
+    <h2 id="acerca-de-mi" class="subtitulo">Acerca de mi</h2>
     <p class="parrafo-mi">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla eveniet iusto quisquam vel facere numquam provident soluta repudiandae iste quis at nihil tempora, magnam ducimus. Ab harum incidunt non et? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim perspiciatis quia quisquam obcaecati tempore. Placeat blanditiis reprehenderit ullam aliquam, pariatur dolorem! Vero deleniti tempora eligendi enim ea ex, facere architecto.</p>
-    <h2 class="subtitulo">Mis habilidades</h2>
+    <h2 id="habilidades" class="subtitulo subtitulo-dos">Mis habilidades</h2>
     <div class="habilidades">
         <div class="habilidades-items">
-        <svg width="68" height="67" viewBox="0 0 68 67" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="content-svg-habilidades">
+        <svg  class="habilidades-svg"  width="68" height="67" viewBox="0 0 68 67" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M49.4062 4.05664H18.5938C16.2496 4.05664 14.3438 5.93447 14.3438 8.24414V58.4941C14.3438 60.8038 16.2496 62.6816 18.5938 62.6816H49.4062C51.7504 62.6816 53.6562 60.8038 53.6562 58.4941V8.24414C53.6562 5.93447 51.7504 4.05664 49.4062 4.05664ZM34 53.9141C32.5324 53.9141 31.3438 52.7429 31.3438 51.2969C31.3438 49.8509 32.5324 48.6797 34 48.6797C35.4676 48.6797 36.6562 49.8509 36.6562 51.2969C36.6562 52.7429 35.4676 53.9141 34 53.9141Z" fill="white"/>
             </svg>
+        </div>
             <p class="habilidaes-items-text">Mobile app desing</p>
         </div>
         <div class="habilidades-items">
-        <svg width="91" height="91" viewBox="0 0 91 91" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="content-svg-habilidades">
+        <svg  class="habilidades-svg"  width="91" height="91" viewBox="0 0 91 91" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M26.5417 49.2917H11.375C9.28962 49.2917 7.58337 47.5854 7.58337 45.5C7.58337 43.4146 9.28962 41.7083 11.375 41.7083H26.5417C28.6271 41.7083 30.3334 43.4146 30.3334 45.5C30.3334 47.5854 28.6271 49.2917 26.5417 49.2917ZM22.75 30.3333C22.75 28.2479 21.0438 26.5417 18.9584 26.5417H15.1667C13.0813 26.5417 11.375 28.2479 11.375 30.3333C11.375 32.4188 13.0813 34.125 15.1667 34.125H18.9584C21.0438 34.125 22.75 32.4188 22.75 30.3333ZM83.4167 45.5C83.4167 55.965 74.9234 64.4583 64.4584 64.4583H15.1667C13.0813 64.4583 11.375 62.7521 11.375 60.6667C11.375 58.5813 13.0813 56.875 15.1667 56.875H49.2917C47.6992 54.6758 46.448 52.0975 45.8792 49.2917H37.9167C35.8313 49.2917 34.125 47.5854 34.125 45.5C34.125 43.4146 35.8313 41.7083 37.9167 41.7083H45.8792C46.448 38.9025 47.6992 36.3242 49.2917 34.125H30.3334C28.248 34.125 26.5417 32.4188 26.5417 30.3333C26.5417 28.2479 28.248 26.5417 30.3334 26.5417H64.4584C74.9234 26.5417 83.4167 35.035 83.4167 45.5Z" fill="white"/>
             </svg>
+        </div>
             <p class="habilidaes-items-text">Moton Design</p>
         </div>
         <div class="habilidades-items">
-        <svg width="86" height="86" viewBox="0 0 86 86" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="content-svg-habilidades">
+        <svg  class="habilidades-svg"  width="86" height="86" viewBox="0 0 86 86" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M75.2499 43C75.2499 35.7258 72.8491 28.9892 68.0832 22.8617V63.1742C72.8491 57.2258 75.2499 50.4892 75.2499 43ZM63.1741 68.0833H22.8616C25.2983 70.0542 28.4874 71.6667 32.4291 73.1358C36.3349 74.5333 39.8824 75.25 42.9999 75.25C46.1532 75.25 49.6649 74.5333 53.5707 73.1358C57.5124 71.6667 60.7016 70.0542 63.1741 68.0833ZM39.4166 60.9167L25.0833 32.25V60.9167H39.4166ZM60.9166 32.25L46.5832 60.9167H60.9166V32.25ZM42.9999 52.0658L56.4374 25.0833H29.5624L42.9999 52.0658ZM63.1741 17.9167C57.2257 13.1508 50.4891 10.75 42.9999 10.75C35.5107 10.75 28.7741 13.1508 22.8616 17.9167H63.1741ZM17.9166 63.1742V22.8617C13.1508 28.9892 10.7499 35.7258 10.7499 43C10.7499 50.4892 13.1508 57.2258 17.9166 63.1742ZM82.4166 43C82.4166 53.8575 78.6182 63.1742 70.8783 70.8783C63.1741 78.6183 53.8574 82.4167 42.9999 82.4167C32.1424 82.4167 22.8616 78.6183 15.1216 70.8783C7.38158 63.1742 3.58325 53.8575 3.58325 43C3.58325 32.1425 7.38158 22.8617 15.1216 15.1217C22.8616 7.38166 32.1424 3.58333 42.9999 3.58333C53.8574 3.58333 63.1741 7.38166 70.8783 15.1217C78.6182 22.8617 82.4166 32.1425 82.4166 43Z" fill="white"/>
             </svg>
-            <p class="habilidaes-items-text">Creación de Sistemas de diseño</p>
+        </div>
+            <p class="habilidaes-items-text">Creación de <br> Sistemas de diseño</p>
         </div>
         <div class="habilidades-items">
-         <svg width="86" height="86" viewBox="0 0 86 86" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="content-svg-habilidades">
+         <svg  class="habilidades-svg"  width="86" height="86" viewBox="0 0 86 86" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M68.0833 14.3333H17.9167C16.0159 14.3333 14.1931 15.0884 12.8491 16.4324C11.5051 17.7764 10.75 19.5993 10.75 21.5V64.5C10.75 66.4007 11.5051 68.2236 12.8491 69.5676C14.1931 70.9116 16.0159 71.6667 17.9167 71.6667H68.0833C72.025 71.6667 75.25 68.4417 75.25 64.5V21.5C75.25 19.5993 74.4949 17.7764 73.1509 16.4324C71.8069 15.0884 69.9841 14.3333 68.0833 14.3333ZM68.0833 64.5H17.9167V28.6667H68.0833V64.5Z" fill="white"/>
             </svg>
+        </div>
             <p class="habilidaes-items-text">Desarrollo Web</p>
         </div>                
     </div>
-    <h2 class="subtitulo">Experiencia</h2>
-    <div>
-        <div>
-
+    <h2 id="experiencia" class="subtitulo">Experiencia</h2>
+    <div class="experience">
+        <div class="experienc-content">
+            <p class="experienc-time gris">2016-2018</p>
+            <div class="experienc-content-sub">
+                <span>Visual Designer</span>
+                <span class="gris">Wizeline</span>
+            </div>
+        </div>
+        <hr>
+        <div class="experienc-content">
+            <p class="experienc-time gris">2016-2018</p>
+            <div class="experienc-content-sub">
+                <span>Visual Designer</span>
+                <span class="gris">Wizeline</span>
+            </div>
+        </div>
+        <hr>
+        <div class="experienc-content">
+            <p class="experienc-time gris">2016-2018</p>
+            <div class="experienc-content-sub">
+                <span>Visual Designer</span>
+                <span class="gris">Wizeline</span>
+            </div>
         </div>
     </div>
+    <h2 id="portafolio" class="subtitulo subtitulo-portafolio">Portafolio</h2>
+    <div class="img-portafolio">
+        <img class="ilustraciones" src="./assets/img/ilustracion_1.jpg" alt="">
+        <img class="ilustraciones" src="./assets/img/ilustracion_2.jpg" alt="">
+        <img class="ilustraciones" src="./assets/img/ilustracion_3.jpg" alt="">
 
-
-
+    </div>
+    <br>
+    <br>
+    <h2 id="contacto" class="subtitulo">Contacto</h2>
+    <div class="contacto">
+        <div class="contacto-items">
+            <div class="content-svg">
+            <svg class="contacto-svg" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M36.6669 28.2V33.2C36.6688 33.6642 36.5737 34.1236 36.3877 34.5489C36.2018 34.9742 35.929 35.356 35.587 35.6698C35.245 35.9836 34.8412 36.2225 34.4015 36.3712C33.9618 36.5199 33.4958 36.5751 33.0335 36.5333C27.9049 35.9761 22.9785 34.2236 18.6502 31.4167C14.6233 28.8578 11.2091 25.4436 8.65021 21.4167C5.83351 17.0687 4.08062 12.1183 3.53355 6.96666C3.4919 6.50577 3.54667 6.04126 3.69438 5.6027C3.84209 5.16414 4.0795 4.76114 4.39149 4.41936C4.70348 4.07758 5.08322 3.8045 5.50653 3.61753C5.92984 3.43055 6.38745 3.33376 6.85021 3.33332H11.8502C12.6591 3.32536 13.4432 3.61179 14.0565 4.13921C14.6698 4.66663 15.0703 5.39907 15.1835 6.19999C15.3946 7.8001 15.786 9.3712 16.3502 10.8833C16.5745 11.4799 16.623 12.1282 16.4901 12.7515C16.3571 13.3747 16.0483 13.9468 15.6002 14.4L13.4835 16.5167C15.8561 20.6892 19.311 24.1441 23.4835 26.5167L25.6002 24.4C26.0534 23.9519 26.6255 23.6431 27.2487 23.5101C27.872 23.3772 28.5203 23.4257 29.1169 23.65C30.629 24.2142 32.2001 24.6056 33.8002 24.8167C34.6098 24.9309 35.3492 25.3387 35.8778 25.9625C36.4063 26.5863 36.6872 27.3826 36.6669 28.2Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </div>
+            <p class="contacto-items-text">Número celular</p>
+            <p class="contacto-items-text gris">0996774133</p>
+        </div>
+        <div class="contacto-items">
+            <div class="content-svg">
+            <svg class="contacto-svg" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6.66683 6.66666H33.3335C35.1668 6.66666 36.6668 8.16666 36.6668 9.99999V30C36.6668 31.8333 35.1668 33.3333 33.3335 33.3333H6.66683C4.8335 33.3333 3.3335 31.8333 3.3335 30V9.99999C3.3335 8.16666 4.8335 6.66666 6.66683 6.66666Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M36.6668 9.99998L20.0002 21.6667L3.3335 9.99998" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </div>
+            <p class="contacto-items-text">Email</p>
+            <p class="contacto-items-text gris">fernandoparadoja@gmail.com</p>
+        </div>                
+    </div>
+    <br>
+    <br>
+    <br>
+    <p class="contacto-items-text saludo-fin">Hecho con  <i class="fa-solid fa-heart"></i> 
+         en academlo</p>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <script src="./assets/js/main.js"></script>
 </body>
